изменил пару недочетов
в формы "купить" добавил цену, устранил пару недочетов

--- a/catalog.html
+++ b/catalog.html
@@ -94,6 +94,7 @@
                       <a href=""><img src="http://placehold.it/150x100"></a>
                       <p>Набор для путешествий</p>
                       <p>«baxter of california» </p>
+                      <p>«2 900РУБ. </p>
                       <button  class="btn" type="submit" >Купить</button>
                   </form>      
               </article>
@@ -102,6 +103,7 @@
                       <a href=""><img src="http://placehold.it/150x100"></a>
                       <p>Увлажняющий кондиционер</p>
                       <p>«baxter of california» </p>
+                      <p>«750РУБ. </p>
                       <button class="btn" type="submit" >Купить</button>
                   </form>      
               </article>
@@ -110,6 +112,7 @@
                       <a href=""><img src="http://placehold.it/150x100"></a>
                       <p>Гель для волос</p>
                       <p>«suavecito» </p>
+                      <p>«290РУБ. </p>
                       <button class="btn" type="submit" >Купить</button>
                   </form>      
               </article>
@@ -118,6 +121,7 @@
                       <a href=""><img src="http://placehold.it/150x100"></a>
                       <p>Глина для укладки волос</p>
                       <p>«american crew» </p>
+                      <p>«500РУБ. </p>
                       <button class="btn" type="submit" >Купить</button>
                   </form>      
               </article>
@@ -126,7 +130,8 @@
                       <a href=""><img src="http://placehold.it/150x100"></a>
                       <p>Гель для волос</p>
                       <p>«american crew» </p>
-                      <input class="btn" type="submit" value="Купить">
+                      <p>«300РУБ. </p>
+                       <button  class="btn" type="submit" >Купить</button>
                   </form>      
               </article>
                <article class="catalog_item">
@@ -134,6 +139,7 @@
                       <a href=""><img src="http://placehold.it/150x100"></a>
                       <p>Набор для бритья</p>
                       <p>«baxter of california» </p>
+                      <p>«3 900РУБ. </p>
                       <button class="btn" type="submit" >Купить</button>
                   </form>      
               </article>
