--- a/catalog-item.html
+++ b/catalog-item.html
@@ -3,10 +3,14 @@
   <head>
     <meta charset="utf-8">
     <title>Страница товара</title>
+    <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
        <header>
           <div class="container"> 
+              <div class="index-logo">
+                  <img src="img/Logo.svg" width="111" height="24" alt="Логотип ">
+              </div>
               <nav class="main-navigation"> 
                   <ul class="nav-list">
                       <li class="nav-item">
@@ -33,7 +37,7 @@
       </header>
       <main class="container">
           <div class="title">
-              <h1>Набор для путешествий «Baxter of California»</h1>
+              <h2>Набор для путешествий «Baxter of California»</h2>
               <div class="breadcrumbs">
                   <ul>
                       <li><a class="breadcrumbs-link" href="#"> Главная</a></li>
@@ -46,21 +50,21 @@
           <div class="wrapper">
               <section class="picture">
                   <figure class="picture_big">
-                      <img src="http://placehold.it/350x200">
+                      <img src="img/big-bag.jpg" width="460" height="498" alt="Travel Kit">
                   </figure>
                   <figure class="picture_small">
                       <ul>
-                          <li><a href="#"><img src="http://placehold.it/150x100"></a></li>
-                          <li><a href="#"><img src="http://placehold.it/150x100"></a></li>
-                          <li><a href="#"><img src="http://placehold.it/150x100"></a></li>
+                          <li><a href="#">  <img src="img/small-bag1.jpg" width="140" height="149" alt="Travel Kit"></a></li>
+                          <li><a href="#"><img src="img/small-bag2.jpg" width="140" height="149" alt="Travel Kit"></a></li>
+                          <li><a href="#"><img src="img/small-bag3.jpg" width="140" height="149" alt="Travel Kit"></a></li>
                       </ul>
                   </figure>
               </section>
               <section class="article">
                   <section class="article-list">
-                      <div class="article-item">Есть в наличие
+                      <div class="article-item_1">Есть в наличие
                       </div>
-                      <div class="article-item">Артикул: dexer-ae
+                      <div class="article-item_2">Артикул: dexer-ae
                       </div>
                   </section>
                   <p>Travel Kit – необходимый аксессуар во время любого путешествия. В аккуратной кожаной сумке находится все, что нужно для бритья и ухода за кожей во время рабочей поездки или отдыха: средство для умывания, увлажняющий крем, крем для бритья, крем после бритья, шампунь. Набор также может стать отличным подарком.</p>
@@ -73,7 +77,7 @@
                   </div> 
               </section>
               <section class="desc">
-                  <h2>В набор входят</h2>
+                  <h3>В набор входят</h3>
                   <ul>
                       <li>Средство для умывания (50 мл)</li>
                       <li>Увлажняющий крем (50 мл)</li>
