--- a/catalog.html
+++ b/catalog.html
@@ -3,10 +3,14 @@
   <head>
     <meta charset="utf-8">
     <title>Каталог</title>
+    <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
       <header>
           <div class="container"> 
+              <div class="index-logo">
+                  <img src="img/Logo.svg" width="111" height="24" alt="Логотип ">
+              </div>
               <nav class="main-navigation"> 
                   <ul>
                       <li>
@@ -33,7 +37,7 @@
       </header>
       <main class="container">
           <div class="title">
-              <h1>Средства для ухода</h1>
+              <h2>Средства для ухода</h2>
               <div class="breadcrumbs">
                   <ul>
                       <li>Главная</li>
@@ -43,7 +47,7 @@
               </div>
           </div>
           <div class="filter">
-              <h2>Производители</h2>
+              <h3>Производители</h3>
               <form class="filter_form" action="" method="post">
                   <div class="filter_one">
                       <ul class="filter_list">
@@ -73,7 +77,7 @@
                           </li>
                       </ul>
                   </div>
-              <h2>Группы товаров</h2>
+              <h3>Группы товаров</h3>
                   <div class="filter_two" >
                       <ul class="filter_list">        
                           <li  class="filter_item">
@@ -96,7 +100,7 @@
           <div class="catalog-list">
               <section class="catalog_item">
                       <div>
-                          <a href=""><img src="http://placehold.it/150x100"></a>
+                          <a href=""><img src="img/item1.jpg"  width="220" height="165" alt="Набор для путешествий"></a>
                       </div>
                       <div><a href="#">Набор для путешествий <br>                     
                       «Baxter Of California» </a>
@@ -111,9 +115,9 @@
                </section>
                <section class="catalog_item">
                       <div>
-                          <a href=""><img src="http://placehold.it/150x100"></a>
+                          <a href=""><img src="img/item2.jpg"  width="220" height="165" alt="Увлажняющий кондиционер"></a>
                       </div>
-                      <div><a href="#">Набор для путешествий <br>                     
+                      <div><a href="#">Увлажняющий кондиционер <br>                     
                       «Baxter Of California» </a>
                       </div>
                       <div class="price">
@@ -126,10 +130,10 @@
                </section>
                <section class="catalog_item">
                       <div>
-                          <a href=""><img src="http://placehold.it/150x100"></a>
+                          <a href=""><img src="img/item3.jpg"  width="220" height="165" alt="Гель для волос"></a>
                       </div>
-                      <div><a href="#">Набор для путешествий <br>                     
-                      «Baxter Of California» </a>
+                      <div><a href="#">Гель для волос<br>                     
+                      «SUAVECITO» </a>
                       </div>
                       <div class="price">
                           <div class="price-item">290руб.
@@ -141,10 +145,10 @@
                </section>
                <section class="catalog_item">
                       <div>
-                          <a href=""><img src="http://placehold.it/150x100"></a>
+                          <a href=""><img src="img/item4.jpg"  width="220" height="165" alt="Глина для укладки волос "></a>
                       </div>
-                      <div><a href="#">Набор для путешествий <br>                     
-                      «Baxter Of California» </a>
+                      <div><a href="#">Глина для укладки волос <br>                     
+                      «American crew» </a>
                       </div>
                       <div class="price">
                           <div class="price-item">500руб.
@@ -156,10 +160,10 @@
               </section>
                <section class="catalog_item">
                       <div>
-                          <a href=""><img src="http://placehold.it/150x100"></a>
+                          <a href=""><img src="img/item5.jpg"  width="220" height="165" alt="Гель для волос"></a>
                       </div>
-                      <div><a href="#">Набор для путешествий <br>                     
-                      «Baxter Of California» </a>
+                      <div><a href="#">Гель для волос <br>                     
+                      «American crew» </a>
                       </div>
                       <div class="price">
                           <div class="price-item">300руб.
@@ -171,9 +175,9 @@
                </section>
                <section class="catalog_item">
                       <div>
-                          <a href=""><img src="http://placehold.it/150x100"></a>
+                          <a href=""><img src="img/item6.jpg"  width="220" height="165" alt="Набор для бритья"></a>
                       </div>
-                      <div><a href="#">Набор для путешествий <br>                     
+                      <div><a href="#">Набор для бритья <br>                     
                       «Baxter Of California» </a>
                       </div>
                       <div class="price">
