создал сетку каталога барбершопа

--- a/catalog-item.html
+++ b/catalog-item.html
@@ -9,7 +9,7 @@
        <header>
           <div class="container"> 
               <div class="index-logo">
-                  <img src="img/Logo.svg" width="111" height="24" alt="Логотип ">
+                  <img src="img/logo.svg" width="111" height="24" alt="Логотип ">
               </div>
               <nav class="main-navigation"> 
                   <ul class="nav-list">
