сетка для внутренней страницы каталога

--- a/catalog.html
+++ b/catalog.html
@@ -40,8 +40,8 @@
               <h2>Средства для ухода</h2>
               <div class="breadcrumbs">
                   <ul class="breadcrumbs-list">
-                      <a href="#"><li class="breadcrumbs-item">Главная</li></a>
-                      <a href="#"><li class="breadcrumbs-item">Магазин</li></a>
+                      <li class="breadcrumbs-item"><a href="#">Главная</a></li>
+                      <li class="breadcrumbs-item"><a href="#">Магазин</a></li>
                       <li class="breadcrumbs-item">Средства ухода</li>
                   </ul>
               </div>
