--- a/catalog-item.html
+++ b/catalog-item.html
@@ -6,27 +6,27 @@
     <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
-       <header>
-          <div class="container"> 
-              <div class="index-logo">
-                  <img src="img/logo.svg" width="111" height="24" alt="Логотип ">
-              </div>
+      <header class="main-header">
+          <div class="container clearfix">  
               <nav class="main-navigation"> 
+                  <div class="index-logo">
+                      <a href="#"><img src="img/logo.svg" width="111" height="24" alt="Логотип "></a>
+                  </div>
                   <ul class="nav-list">
                       <li class="nav-item">
-                          <a class="nav-link" href="#">Информация</a>
+                          <a href="#">Информация</a>
                       </li>
                       <li class="nav-item">
-                          <a  class="nav-link" href="#">Новости</a>
-                      </li>
-                      <li  class="nav-item">
-                          <a class="nav-link" href="#">Прайс-лист</a>
+                          <a href="#">Новости</a>
                       </li>
                       <li class="nav-item">
-                          <a class="nav-link" href="#">Магазин</a>
+                          <a href="#">Прайс-лист</a>
                       </li>
                       <li class="nav-item">
-                          <a class="nav-link" href="#">Контакты</a>
+                          <a href="#">Магазин</a>
+                      </li>
+                      <li class="nav-item">
+                          <a href="#">Контакты</a>
                       </li>
                   </ul>
               </nav>
@@ -35,61 +35,64 @@
               </div>
           </div>
       </header>
-      <main class="container">
-          <div class="title">
+      <main class="container ">
+          <div class="title ">
               <h2>Набор для путешествий «Baxter of California»</h2>
               <div class="breadcrumbs">
                   <ul>
-                      <li><a class="breadcrumbs-link" href="#"> Главная</a></li>
-                      <li><a class="breadcrumbs-link" href="#"> Магазин</a></li>
-                      <li><a class="breadcrumbs-link" href="#"> Средства ухода</a></li>
-                      <li>Набор для путешествий «baxter of california»</li>
+                      <li class="breadcrumbs-item"><a class="breadcrumbs-link" href="#"> Главная</a></li>
+                      <li class="breadcrumbs-item"><a class="breadcrumbs-link" href="#"> Магазин</a></li>
+                      <li class="breadcrumbs-item"><a class="breadcrumbs-link" href="#"> Средства ухода</a></li>
+                      <li class="breadcrumbs-item">Набор для путешествий «baxter of california»</li>
                   </ul>
               </div>
           </div>
-          <div class="wrapper">
-              <section class="picture">
+          <div class="wrapper clearfix">
+              <section class="picture ">
                   <figure class="picture_big">
                       <img src="img/big-bag.jpg" width="460" height="498" alt="Travel Kit">
                   </figure>
                   <figure class="picture_small">
                       <ul>
-                          <li><a href="#">  <img src="img/small-bag1.jpg" width="140" height="149" alt="Travel Kit"></a></li>
-                          <li><a href="#"><img src="img/small-bag2.jpg" width="140" height="149" alt="Travel Kit"></a></li>
-                          <li><a href="#"><img src="img/small-bag3.jpg" width="140" height="149" alt="Travel Kit"></a></li>
+                          <li class="small-item"><a href="#">  <img src="img/small-bag1.jpg" width="140" height="149" alt="Travel Kit"></a></li>
+                          <li class="small-item"><a href="#"><img src="img/small-bag2.jpg" width="140" height="149" alt="Travel Kit"></a></li>
+                          <li class="small-item"><a href="#"><img src="img/small-bag3.jpg" width="140" height="149" alt="Travel Kit"></a></li>
                       </ul>
                   </figure>
               </section>
-              <section class="article">
-                  <section class="article-list">
-                      <div class="article-item_1">Есть в наличие
-                      </div>
-                      <div class="article-item_2">Артикул: dexer-ae
-                      </div>
+              <div class="discript">
+                  <section class="article">
+                      <section class="article-list">
+                          <div class="article-item_1">Есть в наличие
+                          </div>
+                          <div class="article-item_2">Артикул: dexer-ae
+                          </div>
+                      </section>
+                      <p>Travel Kit – необходимый аксессуар во время любого путешествия. В аккуратной кожаной сумке находится все, что нужно для бритья и ухода за кожей во время рабочей поездки или отдыха: средство для умывания, увлажняющий крем, крем для бритья, крем после бритья, шампунь. Набор также может стать отличным подарком.</p>
+                      <div class="price">
+                          <div class="price-item">2 900руб.
+                          </div>
+                          <div class="price-item">
+                                <a htef="#">Купить</a>                        
+                          </div>
+                      </div> 
                   </section>
-                  <p>Travel Kit – необходимый аксессуар во время любого путешествия. В аккуратной кожаной сумке находится все, что нужно для бритья и ухода за кожей во время рабочей поездки или отдыха: средство для умывания, увлажняющий крем, крем для бритья, крем после бритья, шампунь. Набор также может стать отличным подарком.</p>
-                  <div class="price">
-                      <div class="price-item">2 900руб.
-                      </div>
-                      <div class="price-item">
-                            <a htef="#">Купить</a>                        
-                      </div>
-                  </div> 
-              </section>
-              <section class="desc">
-                  <h3>В набор входят</h3>
-                  <ul>
-                      <li>Средство для умывания (50 мл)</li>
-                      <li>Увлажняющий крем (50 мл)</li>
-                      <li>Крем для бритья (50 мл)</li>
-                      <li>Крем после бритья, шампунь (50 мл)</li>
-                      <li>Удобная кожаная косметичка</li>
-                  </ul>
-              </section>
+
+                  <section class="desc">
+                      <h3>В набор входят</h3>
+                      <ul>
+                          <li>Средство для умывания (50 мл)</li>
+                          <li>Увлажняющий крем (50 мл)</li>
+                          <li>Крем для бритья (50 мл)</li>
+                          <li>Крем после бритья, шампунь (50 мл)</li>
+                          <li>Удобная кожаная косметичка</li>
+                      </ul>
+                  </section>
+              </div>
           </div>
       </main>
         <footer class="main-footer">
-          <div class="container">
+          <div class="container clearfix">
               <section class="footer-contacts">
                   Барбершоп «Бородинский»<br>
                   Адрес: г. Санкт-Петербург, Б. Конюшенная, д. 19/8<br>
