дополнил сетку для барбершопа

--- a/catalog.html
+++ b/catalog.html
@@ -10,25 +10,27 @@
           <div class="container clearfix">  
               <nav class="main-navigation"> 
                   <div class="index-logo">
-                      <a href="#"><img src="img/logo.svg" width="111" height="24" alt="Логотип "></a>
+                      <a href="#"><img src="img/logo.png" width="111" height="24" alt="Логотип "></a>
                   </div>
-                  <ul class="nav-list">
-                      <li class="nav-item">
-                          <a href="#">Информация</a>
-                      </li>
-                      <li class="nav-item">
-                          <a href="#">Новости</a>
-                      </li>
-                      <li class="nav-item">
-                          <a href="#">Прайс-лист</a>
-                      </li>
-                      <li class="nav-item">
-                          <a href="#">Магазин</a>
-                      </li>
-                      <li class="nav-item">
-                          <a href="#">Контакты</a>
-                      </li>
-                  </ul>
+                  <div class="nav-right">
+                      <ul class="nav-list">
+                          <li class="nav-item">
+                              <a href="#">Информация</a>
+                          </li>
+                          <li class="nav-item">
+                              <a href="#">Новости</a>
+                          </li>
+                          <li class="nav-item">
+                              <a href="#">Прайс-лист</a>
+                          </li>
+                          <li class="nav-item">
+                              <a href="#">Магазин</a>
+                          </li>
+                          <li class="nav-item">
+                              <a href="#">Контакты</a>
+                          </li>
+                      </ul>
+                  </div>
               </nav>
               <div class="user-block">
                   <a class="login" href="#">Вход</a>
@@ -52,28 +54,28 @@
                   <div class="filter_one">
                       <ul class="filter_list">
                           <li class="filter_item">
-                              <input type="checkbox" checked>
-                              <label>baxter of california</label>
+                              <input type="checkbox" id="checkbox-1" name="checkbox" checked>
+                              <label for="checkbox-1">baxter of california</label>
                           </li>
                           <li class="filter_item">
-                              <input type="checkbox">
-                              <label>mr natty</label>
+                              <input type="checkbox" id="checkbox-2" name="checkbox" >
+                              <label for="checkbox-3">mr natty</label>
                           </li >
                           <li class="filter_item">
-                              <input type="checkbox">
-                              <label>suavecito</label>
+                              <input type="checkbox" id="checkbox-3" name="checkbox" >
+                              <label for="checkbox-3">suavecito</label>
                           </li>
                           <li class="filter_item">
-                              <input type="checkbox">
-                              <label>malin+goetz</label>
+                              <input type="checkbox" id="checkbox-4" name="checkbox" >
+                              <label for="checkbox-4">malin+goetz</label>
                           </li>
                           <li class="filter_item">
-                              <input type="checkbox">
-                              <label>murray's</label>
+                              <input type="checkbox" id="checkbox-5" name="checkbox" >
+                              <label for="checkbox-5">murray's</label>
                           </li>
                           <li class="filter_item">
-                              <input type="checkbox">
-                              <label>american crew</label>
+                              <input type="checkbox" id="checkbox-6" name="checkbox" >
+                              <label for="checkbox-6">american crew</label>
                           </li>
                       </ul>
                   </div>
@@ -81,16 +83,16 @@
                   <div class="filter_two" >
                       <ul class="filter_list">        
                           <li  class="filter_item">
-                              <input type="radio" name="change_one" checked>
-                              <label>Бритвенные принадлежности</label>
+                              <input type="radio" id="radio-1" name="change_one" checked>
+                              <label for="radio-1">Бритвенные принадлежности</label>
                           </li>
                           <li  class="filter_item">
-                              <input type="radio" name="change_one" >
-                              <label>Средства для ухода</label>
+                              <input type="radio" id="radio-2" name="change_one" >
+                              <label for="radio-2">Средства для ухода</label>
                           </li>
                           <li  class="filter_item">
-                              <input type="radio" name="change_one" >
-                              <label>Аксессуары</label>
+                              <input type="radio" id="radio-3" name="change_one" >
+                              <label for="radio-3">Аксессуары</label>
                           </li>
                       </ul>
                   </div>
@@ -99,94 +101,106 @@
           </div>
           <div class="catalog-list">
               <section class="catalog_item">
-                      <div>
+                      <div class="content-top">
                           <a href=""><img src="img/item1.jpg"  width="220" height="165" alt="Набор для путешествий"></a>
                       </div>
-                      <div><a href="#">Набор для путешествий <br>                     
-                      «Baxter Of California» </a>
+                      <div class="content-bottom">
+                          <div><a href="#">Набор для путешествий <br>                     
+                          «Baxter Of California» </a>
+                          </div>
+                          <div class="price">
+                              <div class="price-item">2 900руб.
+                              </div>
+                              <div class="price-item">
+                                  <a htef="#">Купить</a>                        
+                              </div>
+                          </div>  
                       </div>
-                      <div class="price">
-                          <div class="price-item">2 900руб.
-                          </div>
-                          <div class="price-item">
-                              <a htef="#">Купить</a>                        
-                          </div>
-                      </div>                   
                </section>
                <section class="catalog_item">
-                      <div>
+                      <div class="content-top">
                           <a href=""><img src="img/item2.jpg"  width="220" height="165" alt="Увлажняющий кондиционер"></a>
                       </div>
-                      <div><a href="#">Увлажняющий кондиционер <br>                     
-                      «Baxter Of California» </a>
+                      <div class="content-bottom">
+                          <div><a href="#">Увлажняющий кондиционер <br>                     
+                          «Baxter Of California» </a>
+                          </div>
+                          <div class="price">
+                              <div class="price-item">750руб.
+                              </div>
+                              <div class="price-item">
+                                  <a htef="#">Купить</a>                        
+                              </div>
+                          </div>  
                       </div>
-                      <div class="price">
-                          <div class="price-item">750руб.
-                          </div>
-                          <div class="price-item">
-                              <a htef="#">Купить</a>                        
-                          </div>
-                      </div>                   
                </section>
                <section class="catalog_item">
-                      <div>
+                      <div class="content-top">
                           <a href=""><img src="img/item3.jpg"  width="220" height="165" alt="Гель для волос"></a>
                       </div>
-                      <div><a href="#">Гель для волос<br>                     
-                      «SUAVECITO» </a>
+                      <div class="content-bottom">
+                          <div><a href="#">Гель для волос<br>                     
+                          «SUAVECITO» </a>
+                          </div>
+                          <div class="price">
+                              <div class="price-item">290руб.
+                              </div>
+                              <div class="price-item">
+                                  <a htef="#">Купить</a>                        
+                              </div>
+                          </div>   
                       </div>
-                      <div class="price">
-                          <div class="price-item">290руб.
-                          </div>
-                          <div class="price-item">
-                              <a htef="#">Купить</a>                        
-                          </div>
-                      </div>                   
                </section>
                <section class="catalog_item">
-                      <div>
+                      <div class="content-top">
                           <a href=""><img src="img/item4.jpg"  width="220" height="165" alt="Глина для укладки волос "></a>
                       </div>
-                      <div><a href="#">Глина для укладки волос <br>                     
-                      «American crew» </a>
+                      <div class="content-bottom">
+                          <div ><a href="#">Глина для укладки волос <br>                  
+                          «American crew» </a>
+                          </div>
+                          <div class="price">
+                              <div class="price-item">500руб.
+                              </div>
+                              <div class="price-item">
+                                  <a htef="#">Купить</a>                        
+                              </div>
+                          </div>   
                       </div>
-                      <div class="price">
-                          <div class="price-item">500руб.
-                          </div>
-                          <div class="price-item">
-                              <a htef="#">Купить</a>                        
-                          </div>
-                      </div>                   
               </section>
                <section class="catalog_item">
-                      <div>
+                      <div class="content-top">
                           <a href=""><img src="img/item5.jpg"  width="220" height="165" alt="Гель для волос"></a>
                       </div>
-                      <div><a href="#">Гель для волос <br>                     
-                      «American crew» </a>
+                      <div class="content-bottom">
+                          <div><a href="#">Гель для волос <br>                     
+                          «American crew» </a>
+                          </div>
+                          <div class="price">
+                              <div class="price-item">300руб.
+                              </div>
+                              <div class="price-item">
+                                  <a htef="#">Купить</a>                        
+                              </div>
+                          </div> 
                       </div>
-                      <div class="price">
-                          <div class="price-item">300руб.
-                          </div>
-                          <div class="price-item">
-                              <a htef="#">Купить</a>                        
-                          </div>
-                      </div>                   
                </section>
                <section class="catalog_item">
-                      <div>
+                      <div class="content-top">
                           <a href=""><img src="img/item6.jpg"  width="220" height="165" alt="Набор для бритья"></a>
                       </div>
-                      <div><a href="#">Набор для бритья <br>                     
-                      «Baxter Of California» </a>
+                      <div class="content-bottom">
+                          <div><a href="#">Набор для бритья <br>                     
+                          «Baxter Of California» </a>
+                          </div>
+                          <div class="price">
+                              <div class="price-item">3 900руб.
+                              </div>
+                              <div class="price-item">
+                                  <a htef="#">Купить</a>                        
+                              </div>
+                          </div>     
                       </div>
-                      <div class="price">
-                          <div class="price-item">3 900руб.
-                          </div>
-                          <div class="price-item">
-                              <a htef="#">Купить</a>                        
-                          </div>
-                      </div>                   
               </section>
           </div>
           <div class="pagination ">
