--- a/catalog-item.html
+++ b/catalog-item.html
@@ -10,25 +10,27 @@
           <div class="container clearfix">  
               <nav class="main-navigation"> 
                   <div class="index-logo">
-                      <a href="#"><img src="img/logo.svg" width="111" height="24" alt="Логотип "></a>
+                      <a href="#"><img src="img/logo.png" width="111" height="24" alt="Логотип "></a>
                   </div>
-                  <ul class="nav-list">
-                      <li class="nav-item">
-                          <a href="#">Информация</a>
-                      </li>
-                      <li class="nav-item">
-                          <a href="#">Новости</a>
-                      </li>
-                      <li class="nav-item">
-                          <a href="#">Прайс-лист</a>
-                      </li>
-                      <li class="nav-item">
-                          <a href="#">Магазин</a>
-                      </li>
-                      <li class="nav-item">
-                          <a href="#">Контакты</a>
-                      </li>
-                  </ul>
+                  <div class="nav-right">
+                      <ul class="nav-list">
+                          <li class="nav-item">
+                              <a href="#">Информация</a>
+                          </li>
+                          <li class="nav-item">
+                              <a href="#">Новости</a>
+                          </li>
+                          <li class="nav-item">
+                              <a href="#">Прайс-лист</a>
+                          </li>
+                          <li class="nav-item">
+                              <a href="#">Магазин</a>
+                          </li>
+                          <li class="nav-item">
+                              <a href="#">Контакты</a>
+                          </li>
+                      </ul>
+                  </div>
               </nav>
               <div class="user-block">
                   <a class="login" href="#">Вход</a>
